--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "albumentations>=2.0.8",
     "opencv-python",
     "numpy",
+    "tensorflow",
+    "keras",
     "datasets",
     "torchvision",
     "transformers",
@@ -17,7 +19,6 @@ dependencies = [
     "timm",
     "pillow",
     "omegaconf",
-    "torchvision",
     "hydra-core",
     "scikit-image>=0.25.2",
     "torchmetrics",
