refit compiled model

--- a/tensor_rt/pyproject.toml
+++ b/tensor_rt/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "wget",
     # you have to take care that you link the right cuda libraries
     #LD_LIBRARY_PATH is a hard link with uv
+    "diffusers",
+    "transformers"
 ]
